Make it easier to use NextDNS or other private DNS server

--- a/config.cfg
+++ b/config.cfg
@@ -88,8 +88,14 @@ dnscrypt_servers:
   ipv4:
     - cloudflare
 #   - google
+#   - <YourCustomServer>  # E.g., if using NextDNS, this will be something like NextDNS-abc123.
+                          # You must also fill in custom_server_stamps below. You may specify
+                          # multiple custom servers.
   ipv6:
     - cloudflare-ipv6
+
+custom_server_stamps:
+# YourCustomServer: 'sdns://...'
 
 # DNS servers which will be used if 'dns_encryption' is 'false'.
 # Fallback resolvers for systemd-resolved
