Change DNS from Cloudflare to Google

--- a/config.cfg
+++ b/config.cfg
@@ -86,13 +86,14 @@ unattended_reboot:
 # https://github.com/DNSCrypt/dnscrypt-resolvers/blob/master/v2/public-resolvers.md
 dnscrypt_servers:
   ipv4:
-    - cloudflare
-#   - google
+    - google
+#   - cloudflare
 #   - <YourCustomServer>  # E.g., if using NextDNS, this will be something like NextDNS-abc123.
                           # You must also fill in custom_server_stamps below. You may specify
                           # multiple custom servers.
-  ipv6:
-    - cloudflare-ipv6
+ ipv6:
+    - google-ipv6
+#   - cloudflare-ipv6
 
 custom_server_stamps:
 # YourCustomServer: 'sdns://...'
