Change DNS from Cloudflare to Google

--- a/config.cfg
+++ b/config.cfg
@@ -86,10 +86,11 @@ unattended_reboot:
 # https://github.com/DNSCrypt/dnscrypt-resolvers/blob/master/v2/public-resolvers.md
 dnscrypt_servers:
   ipv4:
-    - cloudflare
-#   - google
+    - google
+#   - cloudflare
   ipv6:
-    - cloudflare-ipv6
+    - google-ipv6
+#   - cloudflare-ipv6
 
 # DNS servers which will be used if 'dns_encryption' is 'false'.
 # Fallback resolvers for systemd-resolved
