--- a/roles/client/handlers/main.yml
+++ b/roles/client/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: restart strongswan
-  service: name=strongswan state=restarted
+  service: name={{ strongswan_service }} state=restarted
