Don't use google-ipv6

--- a/config.cfg
+++ b/config.cfg
@@ -88,12 +88,14 @@ dnscrypt_servers:
   ipv4:
     - google
 #   - cloudflare
+#   - quad9-doh-ip4-port443-filter-pri
 #   - <YourCustomServer>  # E.g., if using NextDNS, this will be something like NextDNS-abc123.
                           # You must also fill in custom_server_stamps below. You may specify
                           # multiple custom servers.
   ipv6:
-    - google-ipv6
+#   - google-ipv6
 #   - cloudflare-ipv6
+#   - quad9-doh-ip6-port443-filter-pri
 
 custom_server_stamps:
 # YourCustomServer: 'sdns://...'
