--- a/config.cfg
+++ b/config.cfg
@@ -7,21 +7,19 @@
 # Emails are not allowed
 users:
   - avidor.turkewitz
-  - aline.parnagian
-  - ann.schulte
   - bob.nadler
+  - cernan.bernardo
   - colin.reilly
   - crystal.chang
+  - david.braslow
   - drew.price
-  - frantz.lacarriere
   - gary.thom
+  - joel.collins
   - lorgio.jimenez
-  - luke.ghenco
   - matt.donovan
   - mitch.beebe
   - shawn.dsouza
   - spencer.rogers
-  - tom.milewski
   - yann.gregoire
 
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
