--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.3.1
         with:
-          python-version: '3.7'
+          python-version: '3.9'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -34,7 +35,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.3.1
         with:
-          python-version: '3.7'
+          python-version: '3.9'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -93,7 +95,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.3.1
         with:
-          python-version: '3.7'
+          python-version: '3.9'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
