Implemented architecture choice 'arm' or amd 'x86_64' for EC2 cloud (#14289)
New `arch` config.cfg parameter is used along with the image name
parameter to find the most recent OS image to be used in hosted ec2
instance. This allows the user to choose arm based instance types
which was causing algo failure during cloud formation.

--- a/config.cfg
+++ b/config.cfg
@@ -182,6 +182,7 @@ cloud_providers:
     size: t2.micro
     image:
       name: "ubuntu-focal-20.04"
+      arch: x86_64
       owner: "099720109477"
     # Change instance_market_type from "on-demand" to "spot" to take advantage of
     # simplified spot launch options
