fix digitalocean by updating ipv4 address json path
the current api format is documented at https://docs.digitalocean.com/reference/api/api-reference/#operation/get_droplet

if it changes again one can just update the path with some profound observations

--- a/config.cfg
+++ b/config.cfg
@@ -6,9 +6,7 @@
 # User names with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
 # Email addresses are not allowed.
 users:
-  - phone
-  - laptop
-  - desktop
+  - test
 
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
 
