--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -40,7 +40,7 @@
   when: alternative_ingress_ip
 
 - set_fact:
-    cloud_instance_ip: "{{ digital_ocean_droplet.data.ip_address }}"
+    cloud_instance_ip: "{{ digital_ocean_droplet.data.droplet.networks.v4[0].ip_address }}"
     ansible_ssh_user: algo
     ansible_ssh_port: "{{ ssh_port }}"
     cloudinit: true
