--- a/roles/local/tasks/prompts.yml
+++ b/roles/local/tasks/prompts.yml
@@ -2,6 +2,8 @@
 - pause:
     prompt: "{{ item }}"
   when: not tests|default(false)|bool
+  tags:
+    - skip_ansible_lint
   with_items: |
     https://trailofbits.github.io/algo/deploy-to-ubuntu.html
 
