--- a/config.cfg
+++ b/config.cfg
@@ -209,7 +209,7 @@ cloud_providers:
     image: Linux Ubuntu 20.04 LTS 64-bit
     disk: 10
   vultr:
-    os: Ubuntu 20.04 x64
+    os: Ubuntu 20.04 LTS x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   linode:
     type: g6-nanode-1
