--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           sudo snap install shellcheck
-          pip install ansible-lint
+          pip install ansible-lint==6.3.0
 
       - name: Checks and linters
         run: |
           /snap/bin/shellcheck algo install.sh
           ansible-playbook main.yml --syntax-check
-          ansible-lint==6.3.0 -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml
+          ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml
 
   scripted-deploy:
     runs-on: ubuntu-20.04
