Added Users and updated ansible due to errors

--- a/config.cfg
+++ b/config.cfg
@@ -8,19 +8,22 @@
 users:
   - avidor.turkewitz
   - bob.nadler
+  - brian.bosh
   - cernan.bernardo
   - colin.reilly
   - crystal.chang
-  - david.braslow
+  - derek.martin
   - drew.price
+  - emiley.palmquist
   - gary.thom
   - joel.collins
+  - julie.arditti
   - lorgio.jimenez
   - matt.donovan
   - mitch.beebe
-  - shawn.dsouza
-  - spencer.rogers
-  - yann.gregoire
+  - mohamed.muflahi
+  - sheila.hutchinson
+  - tiffany.kanjanabout
 
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
 
