add azure option for osDiskType

--- a/config.cfg
+++ b/config.cfg
@@ -165,6 +165,11 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Standard_B1S
+    osDisk:
+      # The storage account type to use for the OS disk. Possible values:
+      # 'Standard_LRS', 'Premium_LRS', 'StandardSSD_LRS', 'UltraSSD_LRS',
+      # 'Premium_ZRS', 'StandardSSD_ZRS', 'PremiumV2_LRS'.
+      type: Standard_LRS
     image:
       publisher: Canonical
       offer: 0001-com-ubuntu-server-focal-daily
