azure: change default image to minimal ubuntu

--- a/config.cfg
+++ b/config.cfg
@@ -172,8 +172,8 @@ cloud_providers:
       type: Standard_LRS
     image:
       publisher: Canonical
-      offer: 0001-com-ubuntu-server-focal-daily
-      sku: 20_04-daily-lts
+      offer: 0001-com-ubuntu-minimal-focal-daily
+      sku: minimal-20_04-daily-lts
       version: latest
   digitalocean:
     size: s-1vcpu-1gb
