DO droplet size to s-1vcpu-512mb-10gb

--- a/config.cfg
+++ b/config.cfg
@@ -171,7 +171,7 @@ cloud_providers:
       sku: 20_04-daily-lts
       version: latest
   digitalocean:
-    size: s-1vcpu-1gb
+    size: s-1vcpu-512mb-10gb
     image: "ubuntu-20-04-x64"
   ec2:
     # Change the encrypted flag to "false" to disable AWS volume encryption.
