--- a/roles/cloud-vultr/tasks/main.yml
+++ b/roles/cloud-vultr/tasks/main.yml
@@ -4,35 +4,50 @@
 
 - block:
     - name: Creating a firewall group
-      vultr_firewall_group:
+      vultr.cloud.firewall_group:
+        api_key: "{{ vultr_api_key }}"
         name: "{{ algo_server_name }}"
 
     - name: Creating firewall rules
-      vultr_firewall_rule:
+      vultr.cloud.firewall_rule:
+        api_key: "{{ vultr_api_key }}"
         group: "{{ algo_server_name }}"
         protocol: "{{ item.protocol }}"
         port: "{{ item.port }}"
-        ip_version: "{{ item.ip }}"
-        cidr: "{{ item.cidr }}"
-      with_items:
-        - { protocol: tcp, port: "{{ ssh_port }}", ip: v4, cidr: 0.0.0.0/0 }
-        - { protocol: tcp, port: "{{ ssh_port }}", ip: v6, cidr: "::/0" }
-        - { protocol: udp, port: 500, ip: v4, cidr: 0.0.0.0/0 }
-        - { protocol: udp, port: 500, ip: v6, cidr: "::/0" }
-        - { protocol: udp, port: 4500, ip: v4, cidr: 0.0.0.0/0 }
-        - { protocol: udp, port: 4500, ip: v6, cidr: "::/0" }
-        - { protocol: udp, port: "{{ wireguard_port }}", ip: v4, cidr: 0.0.0.0/0 }
-        - { protocol: udp, port: "{{ wireguard_port }}", ip: v6, cidr: "::/0" }
+        ip_type: "{{ item.ip }}"
+        subnet: "{{ item.subnet }}"
+        subnet_size: "0"
+      loop:
+        - { protocol: tcp, port: "{{ ssh_port }}", ip: v4, subnet: 0.0.0.0/0 }
+        - { protocol: tcp, port: "{{ ssh_port }}", ip: v6, subnet: "::/0" }
+        - { protocol: udp, port: 500, ip: v4, subnet: 0.0.0.0/0 }
+        - { protocol: udp, port: 500, ip: v6, subnet: "::/0" }
+        - { protocol: udp, port: 4500, ip: v4, subnet: 0.0.0.0/0 }
+        - { protocol: udp, port: 4500, ip: v6, subnet: "::/0" }
+        - {
+            protocol: udp,
+            port: "{{ wireguard_port }}",
+            ip: v4,
+            subnet: 0.0.0.0/0
+          }
+        - {
+            protocol: udp,
+            port: "{{ wireguard_port }}",
+            ip: v6,
+            subnet: "::/0"
+          }
 
     - name: Upload the startup script
-      vultr_startup_script:
+      vultr.cloud.startup_script:
+        api_key: "{{ vultr_api_key }}"
         name: algo-startup
         script: |
           {{ lookup('template', 'files/cloud-init/base.yml') }}
 
     - name: Creating a server
-      vultr_server:
-        name: "{{ algo_server_name }}"
+      vultr.cloud.instance:
+        api_key: "{{ vultr_api_key }}"
+        label: "{{ algo_server_name }}"
         startup_script: algo-startup
         hostname: "{{ algo_server_name }}"
         os: "{{ cloud_providers.vultr.os }}"
@@ -40,14 +55,14 @@
         region: "{{ algo_vultr_region }}"
         firewall_group: "{{ algo_server_name }}"
         state: started
-        tag: Environment:Algo
-        ipv6_enabled: true
-        auto_backup_enabled: false
-        notify_activate: false
+        tags: ["Environment:Algo"]
+        enable_ipv6: true
+        backups: false
+        activation_email: false
       register: vultr_server
 
     - set_fact:
-        cloud_instance_ip: "{{ vultr_server.vultr_server.v4_main_ip }}"
+        cloud_instance_ip: "{{ vultr_server.vultr_instance.main_ip }}"
         ansible_ssh_user: algo
         ansible_ssh_port: "{{ ssh_port }}"
         cloudinit: true
