--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2.3.2
@@ -13,6 +13,8 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
+        env:
+          DEBIAN_FRONTEND: noninteractive
         run: |
           sudo apt update -y
           python -m pip install --upgrade pip
@@ -27,10 +29,10 @@ jobs:
           ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml
 
   scripted-deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        UBUNTU_VERSION: ["20.04", "22.04"]
+        UBUNTU_VERSION: ["22.04"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2.3.2
@@ -39,6 +41,8 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
+        env:
+          DEBIAN_FRONTEND: noninteractive
         run: |
           sudo apt update -y
           sudo apt install -y \
@@ -87,10 +91,10 @@ jobs:
           sudo env "PATH=$PATH" ./tests/ipsec-client.sh
 
   docker-deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        UBUNTU_VERSION: ["20.04", "22.04"]
+        UBUNTU_VERSION: ["22.04"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2.3.2
@@ -99,6 +103,8 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
+        env:
+          DEBIAN_FRONTEND: noninteractive
         run: |
           set -x
           sudo apt update -y
