--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2.3.2
@@ -29,7 +29,7 @@ jobs:
           ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml
 
   scripted-deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         UBUNTU_VERSION: ["22.04"]
@@ -73,12 +73,14 @@ jobs:
 
       - name: Deployment
         run: |
+          set -x
           until sudo lxc exec algo -- test -f /var/log/cloud-init-output.log; do echo 'Log file not found, Sleep for 3 seconds'; sleep 3; done
           ( sudo lxc exec algo -- tail -f /var/log/cloud-init-output.log & )
           until sudo lxc exec algo -- test -f /var/lib/cloud/data/result.json; do
             echo 'Cloud init is not finished. Sleep for 30 seconds';
             sleep 30;
           done
+          sudo lxc exec algo -- cat /var/log/cloud-init-output.log
           sudo lxc exec algo -- test -f /opt/algo/configs/localhost/.config.yml
           sudo lxc exec algo -- tar zcf /root/algo-configs.tar -C /opt/algo/configs/ .
           sudo lxc file pull algo/root/algo-configs.tar ./
@@ -91,7 +93,7 @@ jobs:
           sudo env "PATH=$PATH" ./tests/ipsec-client.sh
 
   docker-deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         UBUNTU_VERSION: ["22.04"]
