--- a/config.cfg
+++ b/config.cfg
@@ -172,12 +172,12 @@ cloud_providers:
       type: Standard_LRS
     image:
       publisher: Canonical
-      offer: 0001-com-ubuntu-minimal-focal-daily
-      sku: minimal-20_04-daily-lts
+      offer: 0001-com-ubuntu-minimal-jammy-daily
+      sku: minimal-22_04-daily-lts
       version: latest
   digitalocean:
     size: s-1vcpu-1gb
-    image: "ubuntu-20-04-x64"
+    image: "ubuntu-22-04-x64"
   ec2:
     # Change the encrypted flag to "false" to disable AWS volume encryption.
     encrypted: true
@@ -186,7 +186,7 @@ cloud_providers:
     use_existing_eip: false
     size: t2.micro
     image:
-      name: "ubuntu-focal-20.04"
+      name: "ubuntu-jammy-22.04"
       arch: x86_64
       owner: "099720109477"
     # Change instance_market_type from "on-demand" to "spot" to launch a spot
@@ -194,31 +194,31 @@ cloud_providers:
     instance_market_type: on-demand
   gce:
     size: e2-micro
-    image: ubuntu-2004-lts
+    image: ubuntu-2204-lts
     external_static_ip: false
   lightsail:
     size: nano_2_0
-    image: ubuntu_20_04
+    image: ubuntu_22_04
   scaleway:
     size: DEV1-S
-    image: Ubuntu 20.04 Focal Fossa
+    image: Ubuntu 22.04 Jammy Jellyfish
     arch: x86_64
   hetzner:
     server_type: cx11
-    image: ubuntu-20.04
+    image: ubuntu-22.04
   openstack:
     flavor_ram: ">=512"
-    image:  Ubuntu-20.04
+    image:  Ubuntu-22.04
   cloudstack:
     size: Micro
-    image: Linux Ubuntu 20.04 LTS 64-bit
+    image: Linux Ubuntu 22.04 LTS 64-bit
     disk: 10
   vultr:
-    os: Ubuntu 20.04 LTS x64
+    os: Ubuntu 22.04 LTS x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   linode:
     type: g6-nanode-1
-    image: linode/ubuntu20.04
+    image: linode/ubuntu22.04
   local:
 
 fail_hint:
