--- a/roles/strongswan/tasks/openssl.yml
+++ b/roles/strongswan/tasks/openssl.yml
@@ -160,8 +160,13 @@
         manager: auto
 
     - name: Get OpenSSL version
+      shell: openssl version | cut -f 2 -d ' '
+      register: ssl_version
+      run_once: true
+
+    - name: Set OpenSSL version fact
       set_fact:
-        openssl_version: "{{ ansible_facts.packages['openssl'][0]['version'] }}"
+        openssl_version: "{{ ssl_version.stdout }}"
 
     - name: Build the client's p12
       shell: >
