Consistent with other shell executions, fix to use {{openssl_bin}} and pipefile option in the shell command for getting openssl version number (trailofbits#14558)

--- a/roles/strongswan/tasks/openssl.yml
+++ b/roles/strongswan/tasks/openssl.yml
@@ -160,7 +160,10 @@
         manager: auto
 
     - name: Get OpenSSL version
-      shell: openssl version | cut -f 2 -d ' '
+      shell: |
+        set -o pipefail
+        {{ openssl_bin }} version |
+        cut -f 2 -d ' '
       register: ssl_version
       run_once: true
 
