--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -98,6 +98,7 @@
       - cgroup-tools
       - openssl
       - gnupg2
+      - cron
     sysctl:
       - item: net.ipv4.ip_forward
         value: 1
